src/CMakeLists.txt: add more support for MPC + clean some names

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,19 +55,27 @@ file(GLOB SOURCE_WI4MPI_PROFILING
 ####################
 
 add_library(wi4mpi_profiling_OMPI SHARED ${SOURCE_WI4MPI_PROFILING})
-add_library(wi4mpi_profiling_IMPI SHARED ${SOURCE_WI4MPI_PROFILING})
+add_library(wi4mpi_profiling_INTEL SHARED ${SOURCE_WI4MPI_PROFILING})
+add_library(wi4mpi_profiling_MPC SHARED ${SOURCE_WI4MPI_PROFILING})
 
 target_include_directories(wi4mpi_profiling_OMPI 
 													 PRIVATE common
 													 PRIVATE interface/header/_OMPI)
-target_include_directories(wi4mpi_profiling_IMPI
+target_include_directories(wi4mpi_profiling_INTEL
 													 PRIVATE common
 													 PRIVATE interface/header/_INTEL)
+target_include_directories(wi4mpi_profiling_MPC
+													 PRIVATE common
+													 PRIVATE
+                                                     interface/header/_MPC)
 
 set_target_properties(wi4mpi_profiling_OMPI 
 											PROPERTIES
 											COMPILE_FLAGS "${WI4MPI_FLAGS}")
-set_target_properties(wi4mpi_profiling_IMPI 
+set_target_properties(wi4mpi_profiling_INTEL 
+											PROPERTIES
+											COMPILE_FLAGS "${WI4MPI_FLAGS}")
+set_target_properties(wi4mpi_profiling_MPC 
 											PROPERTIES
 											COMPILE_FLAGS "${WI4MPI_FLAGS}")
 
@@ -78,7 +86,12 @@ install(TARGETS
         PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
 )
 install(TARGETS 
-        wi4mpi_profiling_IMPI
+        wi4mpi_profiling_INTEL
+        LIBRARY DESTINATION lib
+        PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
+install(TARGETS 
+        wi4mpi_profiling_MPC
         LIBRARY DESTINATION lib
         PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
 )
@@ -106,6 +119,7 @@ add_library(wi4mpi_MPC_a STATIC  ${SOURCE_WI4MPI_INTERFACE})
 
 add_dependencies(mpi_a wi4mpi_INTEL_a)
 add_dependencies(mpi_a wi4mpi_OMPI_a)
+add_dependencies(mpi_a wi4mpi_MPC_a)
 
 #Headers
 #-------
@@ -195,6 +209,7 @@ target_link_libraries(wi4mpi_MPC_a ${CMAKE_THREAD_LIBS_INIT})
 #Custom command
 #--------------
 
+message(status ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_command(TARGET wi4mpi_INTEL_a 
                     POST_BUILD
                    COMMAND  ${CMAKE_SOURCE_DIR}/scripts/rename_sym.sh libwi4mpi_INTEL_a.a "INTEL"
@@ -214,6 +229,7 @@ add_custom_command(TARGET wi4mpi_MPC_a
                     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 
                 )
+message(status ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_command(TARGET mpi_a 
                 POST_BUILD
                 COMMAND ${CMAKE_SOURCE_DIR}/scripts/assemble_sym.sh libmpi.a libmpi_a.a libwi4mpi_INTEL_a.a libwi4mpi_OMPI_a.a libwi4mpi_MPC_a.a
@@ -323,18 +339,27 @@ list(APPEND LIST_INTERNAL_COMMON_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/common/util
 
 install(FILES ${LIST_INTERNAL_COMMON_HEADER} DESTINATION INTERNAL/include)
 #INTERFACE
-	#OMPI_OMPI
+	#_OMPI
 list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_O "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_OMPI/wrapper_f.h")
 list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_O "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_OMPI/app_mpi.h")
 list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_O "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_OMPI/run_mpi.h")
-	#OMPI_INTEL
+	#_INTEL
 list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_I "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_INTEL/wrapper_f.h")
 list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_I "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_INTEL/app_mpi.h")
 list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_I "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_INTEL/run_mpi.h")
 list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_I "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_INTEL/run_mpio.h")
+    #_MPC
+list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_M "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_MPC/wrapper_f.h")
+list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_M "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_MPC/app_mpi.h")
+list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_M "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_MPC/run_mpi.h")
+list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_M "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_MPC/run_mpio.h")
+list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_M "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_MPC/mpcmp.h")
+list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_M "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_MPC/sctk_types.h")
+list(APPEND LIST_INTERNAL_INTERFACE_HEADER_O_M "${CMAKE_CURRENT_SOURCE_DIR}/interface/header/_MPC/wrapper_f.h")
 
 install(FILES ${LIST_INTERNAL_INTERFACE_HEADER_O_O} DESTINATION INTERNAL/interface/include/_OMPI)
 install(FILES ${LIST_INTERNAL_INTERFACE_HEADER_O_I} DESTINATION INTERNAL/interface/include/_INTEL)
+install(FILES ${LIST_INTERNAL_INTERFACE_HEADER_O_M} DESTINATION INTERNAL/interface/include/_MPC)
 #PRELOAD
 	#OMPI_OMPI
 list(APPEND LIST_INTERNAL_PRELOAD_HEADER_O_O "${CMAKE_CURRENT_SOURCE_DIR}/preload/header/OMPI_OMPI/wrapper_f.h")
@@ -440,7 +465,12 @@ install(TARGETS
 )
 install(TARGETS
         wi4mpi_INTEL
-        LIBRARY DESTINATION lib_IMPI
+        LIBRARY DESTINATION lib_INTEL
+				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
+)
+install(TARGETS
+        wi4mpi_MPC
+        LIBRARY DESTINATION lib_MPC
 				PERMISSIONS WORLD_READ WORLD_EXECUTE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_WRITE GROUP_READ GROUP_EXECUTE
 )
 install(FILES ${CMAKE_BINARY_DIR}/src/libmpi.a
