updated source to support PGI compilers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ if(WI4MPI_COMPILER MATCHES GNU)
     set(WI4MPI_FORT_CALL "-DGFORT_CALL")
     set(CC "gcc")
     set(FC "gfortran")
-else(WI4MPI_COMPILER MATCHES INTEL)
+elseif(WI4MPI_COMPILER MATCHES INTEL)
     set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread")
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -pthread -D_WI4MPI_GCC_JIT")
@@ -56,6 +56,14 @@ else(WI4MPI_COMPILER MATCHES INTEL)
     set(WI4MPI_FORT_CALL "-DIFORT_CALL")
     set(CC "icc")
     set(FC "ifort")
+elseif(WI4MPI_COMPILER MATCHES PGI)
+    set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3 -c11 -fPIC -shared")
+    set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -c11 -fPIC -shared -DDEBUG")
+    set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -c11 -fPIC -shared -D_WI4MPI_GCC_JIT")
+    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -c11 -fPIC -shared")
+    set(WI4MPI_FORT_CALL "-DPGI_CALL")
+    set(CC "pgcc")
+    set(FC "pgfortran")
 endif()
 
 #Define the compiling option according to the choosen realease
