--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,14 @@ elseif(WI4MPI_COMPILER MATCHES PGI)
     set(WI4MPI_FORT_CALL "-DPGI_CALL")
     set(CC "pgcc")
     set(FC "pgfortran")
+elseif(WI4MPI_COMPILER MATCHES LLVM)
+    set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared")
+    set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -DDEBUG")
+    set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -fPIC -shared -D_WI4MPI_GCC_JIT")
+    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -fPIC -shared")
+    set(WI4MPI_FORT_CALL "-DFLANG_CALL")
+    set(CC "clang")
+    set(FC "flang")
 endif()
 
 #Define the compiling option according to the choosen realease
